--- a/Serveur/package.json
+++ b/Serveur/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mongodb": "^4.5.0",
     "node-fetch": "^3.2.1",
     "react": "17.0.2",
     "readline": "^1.3.0",
